feat: 提交员工模块

--- a/biocv-boot-denpendencies/pom.xml
+++ b/biocv-boot-denpendencies/pom.xml
@@ -12,6 +12,7 @@
 
     <properties>
         <spring.boot.version>2.3.4.RELEASE</spring.boot.version>
+        <orika.version>1.4.2</orika.version>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +59,13 @@
                 <groupId>com.biocv.boot</groupId>
                 <artifactId>biocv-boot-starter-security</artifactId>
                 <version>1.0-SNAPSHOT</version>
+            </dependency>
+
+            <!--bean的复制工具-->
+            <dependency>
+                <groupId>ma.glasnost.orika</groupId>
+                <artifactId>orika-core</artifactId>
+                <version>${orika.version}</version>
             </dependency>
 
         </dependencies>
