--- a/biocv-boot-test/src/main/resources/application.properties
+++ b/biocv-boot-test/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/biosecurity-boot
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/biocv
 spring.datasource.username=root
 spring.datasource.password=sa123
 spring.datasource.driver-class-name=org.postgresql.Driver
