feat: 提交权限操作接口

--- a/biocv-boot-autoconfigure/pom.xml
+++ b/biocv-boot-autoconfigure/pom.xml
@@ -131,6 +131,19 @@
             <version>1.2.15</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!--对象复制-->
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
