--- a/biocv-boot-business/kiosk-vis-staff/pom.xml
+++ b/biocv-boot-business/kiosk-vis-staff/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>orika-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>biocv-boot-starter-security</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 </project>
