--- a/biocv-boot-test/src/main/resources/application.properties
+++ b/biocv-boot-test/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.datasource.druid.testWhileIdle=true
 spring.datasource.druid.testOnBorrow=false
 spring.datasource.druid.testOnReturn=false
 
+
+biocv.swagger.enable=true
+biocv.swagger.application-name: ${spring.application.name}
+biocv.swagger.application-version: 1.0
+biocv.swagger.application-description: springfox swagger 3.0ÕûºÏDemo
+biocv.swagger.try-host: http://localhost:${server.port}
