--- a/biocv-boot-test/pom.xml
+++ b/biocv-boot-test/pom.xml
@@ -23,14 +23,10 @@
             <artifactId>biocv-boot-starter-data-jpa</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--        </dependency>-->
-
+        <!--权限安全控制-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>biocv-boot-starter-security</artifactId>
         </dependency>
 
         <dependency>
@@ -38,17 +34,12 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!--数据库连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.17</version>
         </dependency>
-
-
-<!--        <dependency>-->
-<!--            <groupId>com.biocv.boot</groupId>-->
-<!--            <artifactId>biocv-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
 
         <!-- 数据库驱驱动 postgresql -->
         <dependency>
@@ -57,10 +48,16 @@
         </dependency>
 
 <!--        <dependency>-->
-<!--            <groupId>com.biocv.boot</groupId>-->
-<!--            <artifactId>kiosk-vis-staff</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>kiosk-vis-staff</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 
