feat: 提交部分代码，用mac开发

--- a/biocv-boot-business/kiosk-vis-system/pom.xml
+++ b/biocv-boot-business/kiosk-vis-system/pom.xml
@@ -16,6 +16,14 @@
             <groupId>com.biocv.boot</groupId>
             <artifactId>biocv-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>publicEvent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
     </dependencies>
 
 
