--- a/biocv-boot-business/kiosk-vis-staff/pom.xml
+++ b/biocv-boot-business/kiosk-vis-staff/pom.xml
@@ -33,6 +33,12 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>publicEvent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
