--- a/biocv-boot-test/pom.xml
+++ b/biocv-boot-test/pom.xml
@@ -24,10 +24,10 @@
         </dependency>
 
         <!--权限安全控制-->
-        <dependency>
-            <groupId>com.biocv.boot</groupId>
-            <artifactId>biocv-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.biocv.boot</groupId>-->
+<!--            <artifactId>biocv-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -57,6 +57,35 @@
             <artifactId>kiosk-vis-staff</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>glasses-cmd</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>glasses-device</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.ben-manes.caffeine</groupId>-->
+<!--            <artifactId>caffeine</artifactId>-->
+<!--        </dependency>-->
+
 
     </dependencies>
 
