--- a/biocv-boot/pom.xml
+++ b/biocv-boot/pom.xml
@@ -40,6 +40,13 @@
             <scope>provided</scope>
         </dependency>
 
+<!--        工具包-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.5.7</version>
+        </dependency>
+
     </dependencies>
 
 </project>
