提交部分代码

--- a/biocv-boot-business/protocol-netty/pom.xml
+++ b/biocv-boot-business/protocol-netty/pom.xml
@@ -29,6 +29,18 @@
             <artifactId>lombok</artifactId>
             <version>1.16.18</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>publicEvent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
