--- a/biocv-boot-business/publicEvent/pom.xml
+++ b/biocv-boot-business/publicEvent/pom.xml
@@ -16,6 +16,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
