--- a/biocv-boot-test/pom.xml
+++ b/biocv-boot-test/pom.xml
@@ -70,6 +70,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>protocol-netty</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/cglib/cglib -->
         <dependency>
             <groupId>cglib</groupId>
