日常提交代码

--- a/biocv-boot-business/auth/pom.xml
+++ b/biocv-boot-business/auth/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>biocv-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.biocv.boot</groupId>
+            <artifactId>biocv-boot-starter-security</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 
